[package]
name = "cardano-slurp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallas = { version="0.16.0" }
net2 = "0.2.37"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.16"
clap = { version="4.1.1", features=["derive", "env"] }
serde = "1.0.152"
serde_json = "1.0.91"
minicbor = { version = "0.19.0", features=["derive", "std"] }
anyhow = "1.0.68"